Fix spacing on splash page

--- a/app/assets/stylesheets/components/account/_account_footer.scss
+++ b/app/assets/stylesheets/components/account/_account_footer.scss
@@ -1,6 +1,6 @@
 .account-footer-nav {
   background-color: black;
-  height: 537px;
+  height: 406px;
   padding: 80px 0 50px;
  }
 
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 407px;
+  height: 406px;
   width: 1170px;
   margin: 0 110px;
  }
